<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 
    android:id="@+id/activityMain"
    android:background="#ff62c1ff">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/edit_padding"
        >
        
        
    	<EditText 
    	    android:id="@+id/etEmail"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	      	android:background="@drawable/edittext_top_bg"
	        android:padding="@dimen/edit_padding"
	        android:hint="@string/email"
	        android:textColorHint="@color/hints"
	        android:drawableLeft="@drawable/email"/>

        <EditText
            android:id="@+id/etEmailConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:padding="@dimen/edit_padding"
            android:hint="@string/email"
            android:textColorHint="@color/hints"
            android:drawableLeft="@drawable/email" />

        <com.seroal.android.uivalidation.impl.TextViewValidation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/emailValidation"
            android:textColor="@color/error_msg"
            android:textStyle="bold" />

        <EditText
    	    android:id="@+id/etGender"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:background="@drawable/edittext_default_bg"
	       	android:layout_marginTop="@dimen/edit_margin_top"
	        android:padding="@dimen/edit_padding"
	        android:hint="@string/gender"
	        android:textColorHint="@color/hints"
	        android:drawableLeft="@drawable/user"
            android:clickable="true"
            android:editable="false"
            android:enabled="true" />

        <EditText
            android:id="@+id/etDateOfBirth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_default_bg"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:padding="@dimen/edit_padding"
            android:hint="@string/dob"
            android:textColorHint="@color/hints"
            android:editable="false"
            android:clickable="true" />

        <com.seroal.android.uivalidation.impl.TextViewValidation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/dobValidation"
            android:textColor="@color/error_msg" />

        <EditText
    	    android:id="@+id/etPass"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:background="@drawable/edittext_default_bg"
	       	android:layout_marginTop="@dimen/edit_margin_top"
	        android:padding="10dp"
	        android:hint="@string/password"
	        android:textColorHint="@color/hints"
	        android:password="true"
	        android:drawableLeft="@drawable/password"/>

        <EditText
            android:id="@+id/etPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_bg"
            android:layout_marginTop="@dimen/edit_margin_top"
            android:padding="@dimen/edit_padding"
            android:hint="@string/password"
            android:textColorHint="@color/hints"
            android:password="true"
            android:drawableLeft="@drawable/password" />

        <com.seroal.android.uivalidation.impl.TextViewValidation
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/passwordValidation"
            android:textStyle="bold"
            android:textColor="@color/error_msg" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Check validation instantly?"
            android:id="@+id/chUpdate"
            android:textStyle="bold|italic"
            android:textColor="@color/chb_color"
            android:checked="true"
            android:clickable="true" />

        <Button
	       	android:id="@+id/btnRegister"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	        android:padding="@dimen/button_padding"
	        android:layout_margin="@dimen/button_margin"
	       	android:text="@string/signUp"
	        style="@style/DefaultButtonText"
	       	android:background="@drawable/button_default_bg" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/tvErrorMsg"
            android:textColor="@color/error_msg_f" />

    </LinearLayout>

</RelativeLayout>
